chore 🚧: Update a delivery end date route
